// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileViewContainer /> Shallow rendering renders without crashing 1`] = `
<ProfileViewComponent
  getUser={[Function]}
  isProfileOfCurrentUser={true}
  match={
    Object {
      "params": Object {
        "username": "alice",
      },
    }
  }
  onEditSubmitted={[Function]}
  profile={
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg",
      "bio": "Quod architecto molestias et.",
      "followersCount": 1,
      "followingCount": 1,
      "likesCount": 2,
      "username": "alice",
    }
  }
  username="alice"
/>
`;

exports[`<ProfileViewContainer /> Shallow rendering should render user prfoile that different from current user 1`] = `
<ProfileViewComponent
  getUser={[Function]}
  isProfileOfCurrentUser={false}
  match={
    Object {
      "params": Object {
        "username": "bob",
      },
    }
  }
  onEditSubmitted={[Function]}
  profile={
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/129.jpg",
      "bio": "Id qui nisi asperiores vel quo.",
      "followersCount": 1,
      "followingCount": 1,
      "likesCount": 1,
      "username": "bob",
    }
  }
  username="bob"
/>
`;
